rfc2467.2/gcc/testsuite/gcc.target/powerpc/vsu/vec-xl-len-13.c
/* { dg-do compile { target { powerpc*-*-* } } } */
/* { dg-skip-if "do not override -mcpu" { powerpc*-*-* } { "-mcpu=*" } { "-mcpu=power9" } } */
/* { dg-require-effective-target ip32 } */
/* { dg-require-effective-target powerpc_p9vector_ok } */
/* { dg-options "-mcpu=power9" } */

#include <altivec.h>

/* This test only runs on 32-bit configurations, where a compiler
   error should be issued because this built-in function is not
   available on 32-bit configurations. */

__vector float
fetch_data (float *address, size_t length)
{
  return vec_xl_len (address, length);	/* { dg-error "Builtin function __builtin_vec_lxvl not supported in this configuration" } */
}
